force-app/main/default/objects/Opportunities__c/Opportunities__c.object-meta.xml
<CustomObject>
    <label>Opportunities Custom</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunities Custom</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>