force-app/main/default/objects/Opportunities__c/fields/Apllication__c.field-meta.xml
<CustomField>
    <fullName>Apllication__c</fullName>
    <label>Apllication</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Engine block</fullName>
            </value>
            <value>
                <fullName>Engine cover</fullName>
            </value>
            <value>
                <fullName>Gearbox</fullName>
            </value>
            <value>
                <fullName>Transmission housing</fullName>
            </value>
            <value>
                <fullName>Compressor housing</fullName>
            </value>
            <value>
                <fullName>Pump housing</fullName>
            </value>
            <value>
                <fullName>Filter housing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>