force-app/main/default/objects/Opportunities__c/fields/CNS_Machine_make_model__c.field-meta.xml
<CustomField>
    <fullName>CNS_Machine_make_model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CNS Machine make/model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>