force-app/main/default/objects/Opportunities__c/fields/Complete_tool_set__c.field-meta.xml
<CustomField>
    <fullName>Complete_tool_set__c</fullName>
    <label>Complete tool set</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tooling list(no FMT customer drawings)</fullName>
            </value>
            <value>
                <fullName>Tooling list(with FMT Customer drawings)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>