force-app/main/default/objects/Opportunities__c/fields/Contact_FMT__c.field-meta.xml
<CustomField>
    <fullName>Contact_FMT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact FMT</label>
    <length>16</length>
    <type>Text</type>
</CustomField>