force-app/main/default/objects/Opportunities__c/fields/Coolant__c.field-meta.xml
<CustomField>
    <fullName>Coolant__c</fullName>
    <label>Coolant</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Top</fullName>
            </value>
            <value>
                <fullName>AD+B</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>No Coolant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>