force-app/main/default/objects/Opportunities__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>Customer name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>