force-app/main/default/objects/Opportunities__c/fields/Customer_contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>customer details</description>
    <label>Customer contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>