force-app/main/default/objects/Opportunities__c/fields/Customer_Drawing_Validation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Drawing_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Drawing Validation</label>
    <type>Checkbox</type>
</CustomField>