force-app/main/default/objects/Opportunities__c/fields/Customer_Operations_Sequence_1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Operations_Sequence_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Operations Sequence 1</label>
    <type>Checkbox</type>
</CustomField>