force-app/main/default/objects/Opportunities__c/fields/Customer_Operations_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Customer_Operations_Sequence__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Information About Part Positioning</inlineHelpText>
    <label>Customer Operations Sequence</label>
    <type>Checkbox</type>
</CustomField>