force-app/main/default/objects/Opportunities__c/fields/Individual_tool__c.field-meta.xml
<CustomField>
    <fullName>Individual_tool__c</fullName>
    <label>Individual tool</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drill</fullName>
            </value>
            <value>
                <fullName>Mill</fullName>
            </value>
            <value>
                <fullName>Reamer</fullName>
            </value>
            <value>
                <fullName>Fine boring tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>