force-app/main/default/objects/Opportunities__c/fields/Machine_Travels_in_X_Y_Z__c.field-meta.xml
<CustomField>
    <fullName>Machine_Travels_in_X_Y_Z__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Machine Travels in X/Y/Z</label>
    <type>Checkbox</type>
</CustomField>