force-app/main/default/objects/Opportunities__c/fields/Max_Tool_Dimention__c.field-meta.xml
<CustomField>
    <fullName>Max_Tool_Dimention__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Max.Tool Dimensions</label>
    <length>40</length>
    <type>Text</type>
</CustomField>