force-app/main/default/objects/Opportunities__c/fields/Oper__c.field-meta.xml
<CustomField>
    <fullName>Oper__c</fullName>
    <label>Operation type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Roughing</fullName>
            </value>
            <value>
                <fullName>Finishing</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>