force-app/main/default/objects/Opportunities__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>