force-app/main/default/objects/Opportunities__c/fields/other_application__c.field-meta.xml
<CustomField>
    <fullName>other_application__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>other application</label>
    <length>20</length>
    <type>Text</type>
</CustomField>