force-app/main/default/objects/Opportunities__c/fields/Other_DIN__c.field-meta.xml
<CustomField>
    <fullName>Other_DIN__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other DIN69871</label>
    <length>50</length>
    <type>Text</type>
</CustomField>