force-app/main/default/objects/Opportunities__c/fields/Other_MAS_BT__c.field-meta.xml
<CustomField>
    <fullName>Other_MAS_BT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other MAS BT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>