force-app/main/default/objects/Opportunities__c/fields/Part_name__c.field-meta.xml
<CustomField>
    <fullName>Part_name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Part Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>