force-app/main/default/objects/Opportunities__c/fields/Posibble_Restrictions_Concering_Tool_Typ__c.field-meta.xml
<CustomField>
    <fullName>Posibble_Restrictions_Concering_Tool_Typ__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Posibble Restrictions Concering Tool Typ</label>
    <type>TextArea</type>
</CustomField>