force-app/main/default/objects/Opportunities__c/fields/Spindle__c.field-meta.xml
<CustomField>
    <fullName>Spindle__c</fullName>
    <label>Spindle</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HSKA32</fullName>
            </value>
            <value>
                <fullName>HSKA40</fullName>
            </value>
            <value>
                <fullName>HSKA63</fullName>
            </value>
            <value>
                <fullName>HSKA80</fullName>
            </value>
            <value>
                <fullName>HSKA100</fullName>
            </value>
            <value>
                <fullName>HSKC40</fullName>
            </value>
            <value>
                <fullName>HSKC63</fullName>
            </value>
            <value>
                <fullName>DIN69871/SK40</fullName>
            </value>
            <value>
                <fullName>DIN69871/SK50</fullName>
            </value>
            <value>
                <fullName>MAS30</fullName>
            </value>
            <value>
                <fullName>MAS40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>