force-app/main/default/objects/Opportunities__c/fields/Toolholder__c.field-meta.xml
<CustomField>
    <fullName>Toolholder__c</fullName>
    <label>Toolholder</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Thermal Shrink</fullName>
            </value>
            <value>
                <fullName>whistle-Notch</fullName>
            </value>
            <value>
                <fullName>Modular Toolholder</fullName>
            </value>
            <value>
                <fullName>Hydro</fullName>
            </value>
            <value>
                <fullName>Weldon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>