force-app/main/default/objects/Opportunities__c/fields/workpiece_material__c.field-meta.xml
<CustomField>
    <fullName>workpiece_material__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>workpiece material</label>
    <length>20</length>
    <type>Text</type>
</CustomField>