force-app/main/default/objects/Opportunities__c/fields/X2D_Drawing_of_Cast_Part__c.field-meta.xml
<CustomField>
    <fullName>X2D_Drawing_of_Cast_Part__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2D Drawing of Cast Part</label>
    <type>Checkbox</type>
</CustomField>