force-app/main/default/objects/Opportunities__c/fields/X3D_Part_Models__c.field-meta.xml
<CustomField>
    <fullName>X3D_Part_Models__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>3D Part Models Including Clamping System for collision verification</inlineHelpText>
    <label>3D Part Models</label>
    <type>Checkbox</type>
</CustomField>