force-app/main/default/objects/Opportunities__c/recordTypes/Opp1.recordType-meta.xml
<RecordType>
    <fullName>Opp1</fullName>
    <active>true</active>
    <label>Opp1</label>
</RecordType>