force-app/main/default/objects/Opportunities__c/recordTypes/Opp2.recordType-meta.xml
<RecordType>
    <fullName>Opp2</fullName>
    <active>false</active>
    <label>Opp2</label>
</RecordType>