force-app/main/default/objects/Opportunities__c/listViews/Opportunities_Closed_Lost.listView-meta.xml
<ListView>
    <fullName>Opportunities_Closed_Lost</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Opportunities Closed Lost</label>
</ListView>