force-app/main/default/objects/Opportunities__c/listViews/Opportunities_Closed_Won.listView-meta.xml
<ListView>
    <fullName>Opportunities_Closed_Won</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Amount__c</columns>
    <columns>Project_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </filters>
    <label>Opportunities Closed Won</label>
</ListView>