force-app/main/default/objects/Opportunities__c/listViews/Opportunities_Need_Identified.listView-meta.xml
<ListView>
    <fullName>Opportunities_Need_Identified</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Opportunities Need Identified</label>
</ListView>