force-app/main/default/objects/Opportunities__c/listViews/Opportunities_Negotiation.listView-meta.xml
<ListView>
    <fullName>Opportunities_Negotiation</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Opportunities Negotiation</label>
</ListView>