force-app/main/default/objects/Opportunities__c/listViews/Opportunities_Proposal_Quote.listView-meta.xml
<ListView>
    <fullName>Opportunities_Proposal_Quote</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Proposal / Quote</value>
    </filters>
    <label>Opportunities Proposal/Quote</label>
</ListView>