force-app/main/default/objects/Opportunities__c/listViews/Opportunities_Qualified.listView-meta.xml
<ListView>
    <fullName>Opportunities_Qualified</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Qualified</value>
    </filters>
    <label>Opportunities Qualified</label>
</ListView>